--- a/install
+++ b/install
@@ -4,6 +4,6 @@ DIR=$(cd $(dirname $0); pwd)
 
 for file in $DIR/*; do
   if [ -x $file/install ]; then
-    source $file/install
+    $file/install
   fi
 done
