--- a/zsh/install
+++ b/zsh/install
@@ -1,10 +1,12 @@
 #!/usr/bin/env zsh
 # install nvm
 
+DIR=$(cd $(dirname $0); pwd)
+
 if [[ -d ~/.oh-my-zsh ]]; then
   echo "ohmyz was already installed."
 else
   echo "install ohmyz"
   git clone git://github.com/robbyrussell/oh-my-zsh.git ~/.oh-my-zsh
-  cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc
+  cp $DIR/.zshrc ~/.zshrc
 fi
