--- a/vim/install
+++ b/vim/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-DIR=$(cd `dirname $0`; pwd)
+DIR=$(cd $(dirname $0); pwd)
 
 if [ -e ~/.vimrc ]; then
   mv ~/.vimrc ~/.vimrc.old
